# resman

./: CMakeLists.txt  Makefile  README.md
inc/: resman.h  resman_types.h
src/: resman.c  resman_types.h
test/: main.c
